[package]
name = "rom-weaver-libarchive-sys"
authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true
build = "build.rs"
links = "archive"

[features]
default = []
write-archives = []
write-extra = ["write-archives"]

[dependencies]
bzip2-sys = { version = "0.1.11", features = ["static"] }
libc.workspace = true
libz-sys = { workspace = true, features = ["static"] }
lz4-sys = "1.9.4"
zstd-sys.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
liblzma-sys = { workspace = true, features = ["parallel"] }
zstd-sys = { workspace = true, features = ["zstdmt"] }

[target.wasm32-wasip1.dependencies]
liblzma-sys = { workspace = true }

[target.wasm32-wasip1-threads.dependencies]
liblzma-sys = { workspace = true, features = ["parallel"] }
zstd-sys = { workspace = true, features = ["zstdmt"] }

[target.'cfg(all(not(target_vendor = "apple"), not(target_arch = "wasm32")))'.dependencies]
openssl-sys = { version = "0.9.80", features = ["vendored"] }

[build-dependencies]
bindgen = "0.72.1"
cmake = "0.1.58"
flate2.workspace = true
path-slash = "0.2.1"
tar.workspace = true

[package.metadata.cargo-machete]
# `libc` is referenced only by the bindings build.rs emits (`raw_line`), which
# cargo-machete cannot see, but the generated code needs the dep to compile.
ignored = ["libc"]

[lints]
workspace = true
