[package]
name = "rom-weaver-nod"
authors = ["Luke Street <luke@street.dev>"]
categories = ["command-line-utilities", "parser-implementations"]
description = "GameCube and Wii disc image support used by rom-weaver"
edition.workspace = true
include = ["src/**/*.rs", "LICENSE-*"]
keywords = ["gamecube", "wii", "iso", "wbfs", "rvz"]
license = "MIT OR Apache-2.0"
publish.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
name = "nod"

[features]
default = [
    "compress-bzip2-vendored",
    "compress-lzma-vendored",
    "compress-zlib-vendored",
    "compress-zstd-vendored",
    "threading",
]
compress-bzip2 = []
compress-bzip2-vendored = ["compress-bzip2", "dep:bzip2-sys"]
compress-bzip2-static = ["compress-bzip2-vendored", "bzip2-sys/static"]
compress-lzma = []
compress-lzma-vendored = ["compress-lzma", "dep:liblzma-sys"]
compress-lzma-static = ["compress-lzma-vendored", "liblzma-sys/static"]
compress-zlib = ["dep:adler2"]
compress-zlib-vendored = ["compress-zlib", "dep:libz-sys"]
compress-zlib-static = ["compress-zlib-vendored", "libz-sys/static"]
compress-zstd = []
compress-zstd-vendored = ["compress-zstd", "dep:zstd-sys"]
compress-zstd-static = ["compress-zstd-vendored"]
openssl = ["dep:openssl"]
openssl-vendored = ["openssl", "openssl/vendored"]
python = ["dep:pyo3", "compress-bzip2-vendored", "compress-lzma-vendored", "compress-zlib-vendored", "compress-zstd-vendored", "threading"]
threading = ["dep:crossbeam-channel", "dep:crossbeam-utils"]

[dependencies]
adler2 = { workspace = true, optional = true }
aes = "0.9.1"
base16ct = "1.0"
block-padding = "0.4"
bytes = "1.11"
bzip2-sys = { version = "0.1.13", optional = true }
cbc = "0.2.0-rc.3"
crc32fast.workspace = true
crossbeam-channel = { version = "0.5", optional = true }
crossbeam-utils = { version = "0.8", optional = true }
crypto-common = "0.2"
digest.workspace = true
dyn-clone = "1.0"
encoding_rs = "0.8"
itertools = "0.15"
liblzma-sys = { workspace = true, optional = true }
libz-sys = { version = "1.1", optional = true }
lru = "0.16"
md-5.workspace = true
openssl = { version = "0.10", optional = true }
polonius-the-crab = "0.5"
pyo3 = { version = "0.28", features = ["abi3-py310", "extension-module"], optional = true }
sha1.workspace = true
simple_moving_average = "1.0"
thiserror.workspace = true
tracing.workspace = true
xxhash-rust = { version = "0.8", features = ["xxh64"] }
zerocopy.workspace = true
zstd-sys = { workspace = true, optional = true }

[package.metadata.cargo-machete]
# Vendored fork - keep churn out of it. `md-5` is imported as `md5`
# (src/util/digest.rs); `crypto-common` is pulled in for trait bounds upstream
# relies on. Both are false positives, not cleanup candidates.
ignored = ["md-5", "crypto-common"]
