[package]
name = "rom-weaver-patches"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
crc32fast.workspace = true
md-5.workspace = true
oxidelta = { version = "0.1.4", default-features = false, features = ["adler32", "lzma-secondary"] }
qbsdiff.workspace = true
rom-weaver-checksum = { path = "../rom-weaver-checksum" }
rom-weaver-codecs = { path = "../rom-weaver-codecs" }
rom-weaver-core = { path = "../rom-weaver-core" }
rayon.workspace = true
serde_json.workspace = true
sha1.workspace = true
tracing.workspace = true
