[package]
name = "rom-weaver-patches"
authors.workspace = true
description = "ROM hack patch formats for rom-weaver: apply, create, and validate IPS, BPS, UPS, xdelta/VCDIFF, PPF, RUP, BDF/BSDIFF40, APS, and more than twenty formats in total."
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
bzip2.workspace = true
crc32fast.workspace = true
liblzma-sys.workspace = true
lzma-rust2.workspace = true
md-5.workspace = true
oxidelta = { version = "0.1.4", default-features = false, features = ["adler32", "lzma-secondary"] }
qbsdiff.workspace = true
rom-weaver-checksum = { path = "../rom-weaver-checksum", version = "0.7.0" }
rom-weaver-core = { path = "../rom-weaver-core", version = "0.7.0" }
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true
sha1.workspace = true
suffix_array.workspace = true
tracing.workspace = true

[package.metadata.cargo-machete]
# `md-5` is imported as `md5` in src/rup.rs - a crate-name-vs-ident false positive.
ignored = ["md-5"]

[lints]
workspace = true
