[package]
name = "rom-weaver-xdelta"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
oxidelta = { version = "0.1.4", default-features = false, features = ["adler32", "lzma-secondary"] }
rayon.workspace = true
rom-weaver-checksum = { path = "../rom-weaver-checksum" }
rom-weaver-codecs = { path = "../rom-weaver-codecs" }
rom-weaver-core = { path = "../rom-weaver-core" }
