[package]
name = "rom-weaver-xdelta"
authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
liblzma-sys.workspace = true
lzma-rust2.workspace = true
oxidelta = { version = "0.1.4", default-features = false, features = ["adler32", "lzma-secondary"] }
rayon.workspace = true
rom-weaver-checksum = { path = "../rom-weaver-checksum", version = "0.5.0" }
rom-weaver-core = { path = "../rom-weaver-core", version = "0.5.0" }
serde_json.workspace = true
tracing.workspace = true

[lints]
workspace = true
