[package]
name = "rom-weaver-typegen"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish = false
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
rom-weaver-core = { path = "../../crates/rom-weaver-core", version = "0.5.0", features = ["typescript-types"] }
rom-weaver-app = { path = "../../crates/rom-weaver-app", version = "0.5.0", features = ["typescript-types"] }
rom-weaver-containers = { path = "../../crates/rom-weaver-containers", version = "0.5.0" }
rom-weaver-patches = { path = "../../crates/rom-weaver-patches", version = "0.5.0" }
serde_json.workspace = true
ts-rs.workspace = true
